@@ -1,5 +1,8 @@
 package org.harryng.demo.user.service;
 
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Root;
 import org.harryng.demo.base.persistence.BaseSearchablePersistence;
 import org.harryng.demo.base.service.AbstractSearchableService;
 import org.harryng.demo.user.persistence.UserPersistence;
@@ -7,10 +10,6 @@ import org.harryng.demo.user.pojo.entity.UserImpl;
 import org.harryng.demo.util.PageInfo;
 import org.harryng.demo.util.PageResult;
 import org.springframework.beans.factory.annotation.Autowired;
-
-import javax.persistence.criteria.CriteriaBuilder;
-import javax.persistence.criteria.CriteriaQuery;
-import javax.persistence.criteria.Root;
 
 public class UserServiceImpl extends AbstractSearchableService<Long, UserImpl> implements UserService {
 
@@ -31,8 +30,8 @@ public class UserServiceImpl extends AbstractSearchableService<Long, UserImpl> i
         Root<UserImpl> root = criteriaQuery.from(UserImpl.class);
         criteriaQuery.where(criteriaBuilder.equal(root.get("username"), username));
         PageResult<UserImpl> pageResult = findByConditions(pageInfo, criteriaQuery);
-        if (pageResult.getResults().size() > 0) {
-            result = pageResult.getResults().get(0);
+        if (!pageResult.getResults().isEmpty()) {
+            result = pageResult.getResults().getFirst();
         }
         return result;
     }
